--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -2,33 +2,33 @@
 footer.footer
 	.container
 		.footer__row
-			.footer__mobile-nav.hide-laptop
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Индустрии
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Услуги
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Кейсы
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Терминалы
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Карьера
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Вебинары
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Новости
-				.footer__mobile-nav-block
-					span.footer__nav-title Устойчивое развитие
-						+svg("menu-dropdown")(class="footer__mobile-menu-dropdown")
-					ul.footer__nav-list
-						li.footer__nav-elem
-							a.footer__nav-link(href="#") Охрана труда
-						li.footer__nav-elem
-							a.footer__nav-link(href="#") Служба качества
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") О нас
-				.footer__mobile-nav-block
-					a.footer__nav-title(href="#") Контакты
+			.footer__mobile-nav.mobile-nav.hide-laptop
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Индустрии
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Услуги
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Кейсы
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Терминалы
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Карьера
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Вебинары
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Новости
+				.mobile-nav__block
+					span.mobile-nav__nav-title Устойчивое развитие
+						+svg("menu-dropdown")(class="mobile-nav__mobile-menu-dropdown")
+					ul.mobile-nav__nav-list
+						li.mobile-nav__nav-elem
+							a.mobile-nav__nav-link(href="#") Охрана труда
+						li.mobile-nav__nav-elem
+							a.mobile-nav__nav-link(href="#") Служба качества
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") О нас
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Контакты
 			// Nav col
 			.footer__col.show-laptop
 				a.footer__nav-title(href="#") Индустрии
