--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -117,68 +117,30 @@ header.header
 				|Вход в MAP
 	.header__mobile-menu
 		.container.header__mobile-menu-container
-			ul.header__mobile-menu-list
-				li.header__mobile-menu-elem
-					.header__mobile-menu-link-box
-						a.header__mobile-menu-link(href="#") Индустрии
-						+svg("menu-dropdown")(class="header__mobile-menu-dropdown")
-					ul.header__mobile-menu-child-list
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Fashion
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Telecom
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Helthcare
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Автомотив
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") POSM маркетинг
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") FMCG
-				li.header__mobile-menu-elem
-					.header__mobile-menu-link-box
-						a.header__mobile-menu-link(href="#") Услуги
-						+svg("menu-dropdown")(class="header__mobile-menu-dropdown")
-					ul.header__mobile-menu-child-list
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Ответственное хранение
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Фулфилмент
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Кросс-докинг
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Таможенный склад
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Упаковка
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Копакинг
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Еще услуга
-				li.header__mobile-menu-elem
-					.header__mobile-menu-link-box
-						a.header__mobile-menu-link(href="#") Major Terminal
-						+svg("menu-dropdown")(class="header__mobile-menu-dropdown")
-					ul.header__mobile-menu-child-list
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") О нас
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Кейсы
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Пресс-релизы
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Наши склады
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Контакты
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Преимущества
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Наши вакансии
-				li.header__mobile-menu-elem
-					.header__mobile-menu-link-box
-						a.header__mobile-menu-link(href="#") Язык
-						+svg("menu-dropdown")(class="header__mobile-menu-dropdown")
-					ul.header__mobile-menu-child-list
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Русский
-						li.header__mobile-menu-child-elem
-							a.header__mobile-menu-child-link(href="") Английский
+			.mobile-nav
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Индустрии
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Услуги
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Кейсы
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Терминалы
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Карьера
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Вебинары
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Новости
+				.mobile-nav__block
+					span.mobile-nav__nav-title Устойчивое развитие
+						+svg("menu-dropdown")(class="mobile-nav__mobile-menu-dropdown")
+					ul.mobile-nav__nav-list
+						li.mobile-nav__nav-elem
+							a.mobile-nav__nav-link(href="#") Охрана труда
+						li.mobile-nav__nav-elem
+							a.mobile-nav__nav-link(href="#") Служба качества
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") О нас
+				.mobile-nav__block
+					a.mobile-nav__nav-title(href="#") Контакты
