--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,6 +2,7 @@
 @import "elements/video";
 
 @import "blocks/header";
+@import "blocks/mobile-nav";
 @import "blocks/search-form";
 @import "blocks/dropdown";
 @import "blocks/button";
