--- a/src/scss/components/blocks/_header.scss
+++ b/src/scss/components/blocks/_header.scss
@@ -454,6 +454,10 @@
 		.header--menu-shown & {
 			transform: none;
 		}
+
+		@media (min-width: $breakpoint-desktop) {
+			display: none !important;
+		}
 	}
 
 	&__mobile-menu-container {
