--- a/src/scss/components/sections/_section-terminals.scss
+++ b/src/scss/components/sections/_section-terminals.scss
@@ -174,4 +174,10 @@
 		width: 100%;
 		height: 100%;
 	}
+
+	&__mobile-filter {
+		max-width: 267px;
+		margin-top: 14px;
+		margin-bottom: 24px;
+	}
 }
