--- a/src/terminals.pug
+++ b/src/terminals.pug
@@ -17,6 +17,14 @@ block content
 	section.section-terminals.container
 		.section-terminals__title-box
 			h2.h2.text-blue.section-terminals__title Наши терминалы
+			.dropdown.dropdown--light-blue-border.section-terminals__mobile-filter.hide-desktop
+				.dropdown__value-box
+					input.dropdown__value(type="text", value="Кулон-Истра", disabled)
+					+svg("chevron-dropdown", true)(class="dropdown__arrow")
+				ul.dropdown__options-list
+					li.dropdown__option.dropdown__option--selected(data-value="Кулон-Истра") Кулон-Истра
+					li.dropdown__option(data-value="Логопарк") Логопарк
+					li.dropdown__option(data-value="М9") М9
 			.section-terminals__dropdown-row
 				.dropdown.dropdown--gray-border.section-terminals__dropdown
 					.dropdown__value-box
