fix: section services slider

--- a/src/scss/components/sections/_section-services.scss
+++ b/src/scss/components/sections/_section-services.scss
@@ -119,4 +119,9 @@
 			line-height: 24px;
 		}
 	}
+	.free-slider {
+		@media (max-width: $breakpoint-desktop) {
+			margin-right: 30px;
+		}
+	}
 }
