--- a/src/scss/components/blocks/_dropdown.scss
+++ b/src/scss/components/blocks/_dropdown.scss
@@ -114,7 +114,7 @@
 		left: 0;
 		min-width: 100%;
 		margin: 0;
-		padding: 28px;
+		padding: 28px 28px 16px;
 		background-color: $color-white;
 		border-radius: 25px;
 		font-family: $font-additional;
@@ -148,6 +148,7 @@
 
 	&__option {
 		position: relative;
+		margin-bottom: 12px;
 		font-family: $font-additional;
 		font-size: 18px;
 		line-height: 18px;
@@ -156,7 +157,7 @@
 		transition: color $transition-default;
 
 		&:not(:last-child) {
-			margin-bottom: 12px;
+			//margin-bottom: 12px;
 		}
 
 		&:hover {
