feat: add more btn in tag list

--- a/src/case-list.pug
+++ b/src/case-list.pug
@@ -55,7 +55,13 @@ block content
 					li.card__tag Fashion
 					li.card__tag Складское хранение
 					li.card__tag Вешальное хранение
-					li.card__tag Еще (7)
+					li.card__tag.card__tag--more Еще (7)
+					li.card__tag.card__tag--hidden Fashion 2
+					li.card__tag.card__tag--hidden Складское хранение 2
+					li.card__tag.card__tag--hidden Вешальное хранение 2
+					li.card__tag.card__tag--hidden Fashion 3
+					li.card__tag.card__tag--hidden Складское хранение 3
+					li.card__tag.card__tag--hidden Вешальное хранение 3
 				.card__text-box
 					p.card__text Здесь будет чуть больше информации по описанию для данного кейса
 				.card__title-box
