--- a/src/scss/components/sections/_section-case-item.scss
+++ b/src/scss/components/sections/_section-case-item.scss
@@ -48,6 +48,16 @@
 			-o-object-fit: cover;
 			object-fit: cover;
 		}
+		.case__img {
+			overflow: hidden;
+			border-radius: 40px;
+			width: 100%;
+			height: 100%;
+			img {
+				width: 100%;
+				height: auto;
+			}
+		}
 	}
 
 	&__panel-title {
