--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,6 +25,7 @@ $font-additional: 'Montserrat', sans-serif;
 $transition-default: .2s ease;
 
 // Breakpoints
+$breakpoint-mobile: 640px;
 $breakpoint-laptop: 992px;
 $breakpoint-desktop-xl: 1500px;
 $breakpoint-desktop: 1200px;
