--- a/src/scss/components/blocks/_header.scss
+++ b/src/scss/components/blocks/_header.scss
@@ -39,6 +39,21 @@
 		}
 	}
 
+	&__slogan {
+		margin-right: auto;
+		color: $color-blue;
+		font-family: $font-secondary;
+		font-size: 24px;
+		font-weight: 500;
+		@media (max-width: $breakpoint-laptop) {
+			font-size: 14px;
+		}
+		@media (max-width: $breakpoint-mobile) {
+			display: none;
+		}
+
+	}
+
 	&__text-dash {
 		display: none;
 
