--- a/src/scss/components/blocks/_header.scss
+++ b/src/scss/components/blocks/_header.scss
@@ -42,7 +42,7 @@
 	&__slogan {
 		margin-right: auto;
 		color: $color-blue;
-		font-family: $font-secondary;
+		font-family: $font-secondary2;
 		font-size: 24px;
 		font-weight: 500;
 		@media (max-width: $breakpoint-laptop) {
