--- a/src/scss/components/sections/_section-about.scss
+++ b/src/scss/components/sections/_section-about.scss
@@ -95,8 +95,17 @@
 
 	&__download-title {
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 		margin: 0;
+	}
+
+	&__download-description {
+		width: 100%;
+		display: block;
+		font-size: 24px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 24px;
 	}
 
 	&__download-link {
@@ -104,7 +113,7 @@
 		z-index: 0;
 		overflow: hidden;
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 		justify-content: space-between;
 		padding: 26px 23px 26px 30px;
 		border: 1px solid #C5E0F2;
